fix(flipbook): slide text is now white for better contrast

--- a/app/styles/shared.css
+++ b/app/styles/shared.css
@@ -136,6 +136,10 @@
   z-index: 9999;
 }
 
+.flipbook-slide-text {
+  color: white;
+}
+
 @media only screen and (min-width: 1140px) {
   .hamburgerMenu-nav-show {
     display: none;
